--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,11 +6,15 @@
     padding: 0 15px;
 }
 
-.weather {
+body {
     height: 100vh;
+}
+
+.weather {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     &__hero {
         padding: 0 10px;
         height: 300px;
@@ -72,6 +76,45 @@
                 outline: none;
                 border: 2px solid #9ec0db;
             }
+        }
+    }
+    .weather__add {
+        font-family: "Merriweather Sans", sans-serif;
+        margin-top: 20px;
+        height: 50px;
+        width: 200px;
+        background: transparent;
+        border: 2px solid #cfecd0;
+        border-radius: 7px;
+        cursor: pointer;
+    }
+}
+
+.weather-list {
+    padding-top: 60px;
+    &__wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+    &__item {
+        font-family: "Merriweather Sans", sans-serif;
+        height: 70px;
+        width: 175px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid #cfecd0;
+        border-radius: 7px;
+        margin-right: 50px;
+        cursor: pointer;
+        h3 {
+            z-index: -1;
+        }
+        &:last-child {
+            margin: 0;
         }
     }
 }
