--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,6 +92,7 @@ body {
 
 .weather-list {
     padding-top: 60px;
+    padding-bottom: 40px;
     &__wrapper {
         display: flex;
         align-items: center;
@@ -108,13 +109,9 @@ body {
         align-items: center;
         border: 2px solid #cfecd0;
         border-radius: 7px;
-        margin-right: 50px;
         cursor: pointer;
         h3 {
             z-index: -1;
-        }
-        &:last-child {
-            margin: 0;
         }
     }
 }
