--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,15 +78,26 @@ body {
             }
         }
     }
-    .weather__add {
-        font-family: "Merriweather Sans", sans-serif;
-        margin-top: 20px;
-        height: 50px;
-        width: 200px;
-        background: transparent;
-        border: 2px solid #cfecd0;
-        border-radius: 7px;
-        cursor: pointer;
+    &__buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .weather__add,
+        .weather__list-clear {
+            font-family: "Merriweather Sans", sans-serif;
+            margin-top: 20px;
+            height: 50px;
+            width: 200px;
+            background: transparent;
+            border: 2px solid #cfecd0;
+            border-radius: 7px;
+            cursor: pointer;
+        }
+        .weather__list-clear {
+            font-size: 12px;
+            height: 25px;
+            width: 120px;
+        }
     }
 }
 
@@ -101,6 +112,7 @@ body {
         gap: 20px;
     }
     &__item {
+        position: relative;
         font-family: "Merriweather Sans", sans-serif;
         height: 70px;
         width: 175px;
@@ -112,6 +124,14 @@ body {
         cursor: pointer;
         h3 {
             z-index: -1;
+        }
+        button {
+            position: absolute;
+            top: 0;
+            right: 0;
+            background: transparent;
+            border: none;
+            cursor: pointer;
         }
     }
 }
