--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@use "./fonts" as fonts;
 
 .container {
     max-width: 1140px;
@@ -7,7 +7,14 @@
 }
 
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
+    @media screen and (max-width: 640px) {
+        // justify-content: flex-start;
+        align-items: start;
+    }
 }
 
 .weather {
@@ -20,10 +27,10 @@ body {
         height: 300px;
         width: 250px;
         border-radius: 20px;
-        background: linear-gradient(90deg, #cfecd0, #a0cea7, #9ec0db);
+        background: linear-gradient(90deg, #b2cdb3, #a0cea7, #9ec0db);
         color: #fff;
         text-align: center;
-        font-family: "Merriweather Sans", sans-serif;
+        font-family: fonts.$font;
         h1,
         h2,
         p {
@@ -38,10 +45,12 @@ body {
             font-size: 36px;
         }
         p {
+            font-weight: 600;
             padding-top: 5px;
         }
         &__content {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             gap: 15px;
         }
@@ -50,9 +59,8 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        input,
         select {
-            font-family: "Merriweather Sans", sans-serif;
+            font-family: fonts.$font;
             font-size: 16px;
             border-radius: 7px;
             margin: 20px 0;
@@ -63,18 +71,43 @@ body {
                 border: 2px solid #9ec0db;
             }
         }
-        input {
-            width: 220px;
-            font-family: "Merriweather Sans", sans-serif;
-            font-size: 20px;
-            border-radius: 7px;
-            margin: 0 0 20px 0;
-            padding: 10px;
-            height: 50px;
-            border: 2px solid #cfecd0;
-            &:focus {
-                outline: none;
-                border: 2px solid #9ec0db;
+        &__searching {
+            min-width: 270px;
+            display: flex;
+            justify-content: space-between;
+            input {
+                font-family: fonts.$font;
+                font-size: 16px;
+                border-radius: 7px;
+                margin: 20px 0;
+                padding: 7px;
+                border: 2px solid #cfecd0;
+                &:focus {
+                    outline: none;
+                    border: 2px solid #9ec0db;
+                }
+            }
+            input {
+                width: 210px;
+                font-family: fonts.$font;
+                font-size: 20px;
+                border-radius: 7px;
+                margin: 0 0 20px 0;
+                padding: 10px;
+                height: 50px;
+                border: 2px solid #cfecd0;
+                &:focus {
+                    outline: none;
+                    border: 2px solid #9ec0db;
+                }
+            }
+            button {
+                font-size: 20px;
+                color: #9ec0db;
+                background: transparent;
+                margin-bottom: 20px;
+                border: none;
+                cursor: pointer;
             }
         }
     }
@@ -84,7 +117,8 @@ body {
         align-items: center;
         .weather__add,
         .weather__list-clear {
-            font-family: "Merriweather Sans", sans-serif;
+            font-weight: 600;
+            font-family: fonts.$font;
             margin-top: 20px;
             height: 50px;
             width: 200px;
@@ -113,7 +147,7 @@ body {
     }
     &__item {
         position: relative;
-        font-family: "Merriweather Sans", sans-serif;
+        font-family: fonts.$font;
         height: 70px;
         width: 175px;
         display: flex;
@@ -123,6 +157,7 @@ body {
         border-radius: 7px;
         cursor: pointer;
         h3 {
+            font-weight: 600;
             z-index: -1;
         }
         button {
@@ -134,4 +169,29 @@ body {
             cursor: pointer;
         }
     }
+}
+
+.main {
+    // font-family: fonts.$font;
+    // display: flex;
+    // align-items: flex-start;
+    // justify-content: space-between;
+    // gap: 150px;
+    // @media screen and (max-width: 900px) {
+    //     gap: 20px;
+    // }
+    // @media screen and (max-width: 640px) {
+    //     flex-direction: column;
+    //     align-items: flex-start;
+    //     justify-content: start;
+    //     .weather-aside-left {
+    //         order: 3;
+    //     }
+    //     .weather-main {
+    //         order: 2;
+    //     }
+    //     .weather-aside-right {
+    //         order: 1;
+    //     }
+    // }
 }
